<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAddProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>